fix more spacing issues

--- a/src/components/Hero/hero.scss
+++ b/src/components/Hero/hero.scss
@@ -9,7 +9,7 @@
   z-index: 1;
 
   @media (min-width: 1440px) {
-    padding-bottom: 10rem;
+    padding-bottom: 5rem;
   }
 
   &::after {
